--- a/index.css
+++ b/index.css
@@ -1,6 +1,8 @@
  /* Container */
  .container {
+  
     position: fixed;
+    display: flex;
     top: 0px;
     left: 0px;
     width: 100%;
@@ -10,12 +12,27 @@
     box-shadow: 0px 0px 1px #171a1f12, 0px 0px 2px #171a1f1F; /* shadow-xs */
     z-index: 1000;
 }
+
+
+
+@media (max-width: 768px) {
+  .container {
+    justify-content: flex-start; /* Align image to the left */
+  }
+}
+
+@media (max-width: 480px) {
+  .container {
+    justify-content: flex-end; /* Align image to the right */
+  }
+}
+
 .bgImage{
   position: absolute;
   top: 0px;
   left: 0px;
   width: 100%;
-  height: 70px;
+  height: auto;
 
 }
 /* Text */
